Feature/login stability - code refactored (#7)
* testing branch fearure for team members

* log file to csv & concurrent request generator

* Add UI smoke pilot GitHub Action

* Add UI smoke pilot GitHub Action

* Stop tracking huge log file

* testing large file push error resolution

* Revert "Merge branch 'main' of https://github.com/TechSMZO/Selenium-UI-Automation into feature/login-stability"

This reverts commit becf8c7489e6b904eb7be3b9126bc518b73d6338, reversing
changes made to e116a0243d797afd75b925bc109f93aadc3e4ab2.

* loginTest code cleaned and optimised

---------

Co-authored-by: Abhishek Jaiswal <abhishek@shipmozo.com>