@@ -5,11 +5,13 @@
  <groupId>Com.Shipmozo.Automation</groupId>
  <artifactId>Selenium-Automation</artifactId>
  <version>0.0.1-SNAPSHOT</version>
- 
- <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-</properties>
 
+ <properties>
+   <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+   <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+   <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+ </properties>
+ 
  <dependencies> 
  <dependency>
     <groupId>com.opencsv</groupId>
@@ -47,12 +49,6 @@
    <artifactId>selenium-java</artifactId>
    <version>4.27.0</version>
 </dependency>
-<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-manager -->
-<dependency>
-   <groupId>org.seleniumhq.selenium</groupId>
-   <artifactId>selenium-manager</artifactId>
-   <version>4.27.0</version>
-</dependency>
 <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
 <dependency>
    <groupId>com.aventstack</groupId>
@@ -66,11 +62,12 @@
    <version>2.16.1</version>
 </dependency>
 <dependency>
- <groupId>org.projectlombok</groupId>
- <artifactId>lombok</artifactId>
- <version>1.18.30</version>
- <scope>provided</scope>
+  <groupId>org.projectlombok</groupId>
+  <artifactId>lombok</artifactId>
+  <version>1.18.32</version>
+  <scope>provided</scope>
 </dependency>
+
 </dependencies>
 
 
@@ -134,15 +131,31 @@
         <mainClass>tests.TestSuiteRunner</mainClass>
     </configuration>
 </plugin>
+
 <plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-compiler-plugin</artifactId>
-    <version>3.13.0</version>
-    <configuration>
-        <source>17</source> <!-- or your Java version -->
-        <target>17</target>
-        <encoding>UTF-8</encoding>
-    </configuration>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-compiler-plugin</artifactId>
+  <version>3.13.0</version>
+  <configuration>
+    <fork>true</fork>
+    <source>17</source>
+    <target>17</target>
+    <compilerArgs>
+      <arg>--add-exports</arg>
+      <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+      <arg>--add-opens</arg>
+      <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+      <arg>--add-opens</arg>
+      <arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+    </compilerArgs>
+    <annotationProcessorPaths>
+      <path>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.18.32</version>
+      </path>
+    </annotationProcessorPaths>
+  </configuration>
 </plugin>
 
 </plugins>
